# zingsa-tec-analysis

./: .gitignore  .vercelignore  CLAUDE.md  Home.py  README.md  app.py  check_starlette.py  clear_cache.ps1  dev.ps1  package.json  pipeline.json  probe_out.json  pyproject.toml  pyrightconfig.json  requirements-streamlit.txt  requirements.txt  restart_app.ps1  run.ps1  run_app.ps1  stations.json  tec_core.py  vercel.json
.devcontainer/: devcontainer.json
api/: [...path].py  cors-router.py  health.py  index.py  navigation-news-router.py  navigation-news.py  processing-router.py  space-weather-router.py  tec-router.py
backend/: .env.example  deps.py  live_manager.py  main.py  navigation_broadcast_scheduler.py  requirements.txt  schemas.py  space_weather_logger.py  station_status_logger.py  timeline_builder.py  timeline_cache.py  vercel_dispatch.py
config/: broadcast_routes.example.json
frontend/: .env.production  next.config.ts  package-lock.json  package.json
pages/: 10_VTEC_Theory.py  11_AI_Assistant.py  12_Live_Pipeline.py  13_AI_Assistant.py  1_Dashboard.py  2_Processing.py  3_Time_Series.py  4_PRN_Explorer.py  5_TEC_Heatmap.py  6_Space_Weather.py  7_Research.py  7_TEC_Anomaly_Detection.py  8_AI_Assistant.py  9_CORS_Hardware.py
scripts/: build_tec_archive_index.py  gic_gateway_upload.py  install_collector_task.ps1  live_ntrip_collector.py  navigation_broadcast_agent.py  run_collector.ps1  sync_broadcast_recipients.py  vercel_build.py  verify_karoi_rinex.py  verify_ntrip_live.py  verify_pages.ps1  verify_processing_plots.py
tests/: test_ai_assistant.py  (+64 more)
(+310 files in other folders)
