[project]
name = "zgiis-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyrtcm>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
]

[tool.vercel]
entrypoint = "backend.main:app"
