[project]
name = "zgiis-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyrtcm>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "statsmodels>=0.14.0",
    "georinex>=1.16.2",
    "scipy>=1.13.0",
    "fpdf2>=2.7.9",
    "anthropic>=0.25.0",
    "folium>=0.16.0",
    "streamlit-folium>=0.18.0",
]

[tool.vercel]
entrypoint = "backend.main:app"

[tool.vercel.scripts]
build = "python scripts/vercel_build.py"
